[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Music/Nivel 1/Muerte.mp3" type="AudioStream" id=1]
[ext_resource path="res://assets/Images/One/OneSprite.png" type="Texture" id=2]
[ext_resource path="res://Scenes/One2.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 18.0
height = 46.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.0
height = 48.0

[sub_resource type="Animation" id=3]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 2 ]
}

[node name="One" type="Node2D"]
position = Vector2( 450, 233 )

[node name="One2" type="KinematicBody2D" parent="."]
position = Vector2( 2, -2 )
script = ExtResource( 3 )

[node name="AreaOne" type="Area2D" parent="One2"]
collision_layer = 23
collision_mask = 23

[node name="CollisionShape2D" type="CollisionShape2D" parent="One2/AreaOne"]
position = Vector2( -1, -3 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="One2"]
position = Vector2( -2, -4 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="One2"]
position = Vector2( -4, -3 )
texture = ExtResource( 2 )
hframes = 4

[node name="Camera2D" type="Camera2D" parent="One2"]
position = Vector2( -228, -78 )
offset = Vector2( 240, 0 )
current = true
zoom = Vector2( 0.8, 0.8 )
limit_left = -410
limit_top = 0
limit_right = 1200
limit_bottom = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="One2"]
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/Walk = SubResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="One2"]
stream = ExtResource( 1 )

[node name="Timer" type="Timer" parent="One2"]
process_mode = 0

[connection signal="area_entered" from="One2/AreaOne" to="One2" method="_on_AreaOne_area_entered"]
[connection signal="body_entered" from="One2/AreaOne" to="One2" method="_on_AreaOne_body_entered"]
[connection signal="timeout" from="One2/Timer" to="One2" method="_on_Timer_timeout"]
